# pan-no-rec

./: .gitignore  Cargo.toml  pyproject.toml
src/: cli.rs  dists.rs  error.rs  gene.rs  genome.rs  graph.rs  io.rs  lib.rs  main.rs  memory_profile.rs  model.rs  output.rs  panaroo_io.rs
tests/: cli.rs  gene_alignments.tar.bz2  smoke_gene_alignments.py
